--- a/fluctlight-router/Cargo.toml
+++ b/fluctlight-router/Cargo.toml
@@ -10,6 +10,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 fluctlight-mod-interface = { path = "../fluctlight-mod-interface" }
-ruma-federation-api = "0.3.1"
+ruma-federation-api = { version = "0.3.1", features = ["server"] }
+ruma-api = "0.18.3"
 url = "2.2"
 smallvec = "1.8"
+http = "0.2.4"
