--- a/fluctlight-router/Cargo.toml
+++ b/fluctlight-router/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "fluctlight-router"
-version = "0.1.0"
+version = "0.1.0-alpha.7"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,3 +16,5 @@ http = "0.2.4"
 bumpalo = { version = "3.9", features = ["collections"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+ed25519-compact = "1.0"
+base64 = "0.13"
