--- a/fluctlight-router/Cargo.toml
+++ b/fluctlight-router/Cargo.toml
@@ -18,3 +18,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1", features = ["raw_value"] }
 ed25519-compact = "1.0"
 base64 = "0.13"
+# Temporary; should be moved to fluctlight-main
+reqwest = { version = "0.11", features = ["blocking"]}
+percent-encoding = "2.1"
+sha2 = "0.10"
