Semi-proper backfill experiment

--- a/fluctlight-router/Cargo.toml
+++ b/fluctlight-router/Cargo.toml
@@ -23,7 +23,7 @@ serde_json = { version = "1", features = ["raw_value"] }
 ed25519-compact = "1.0"
 base64 = "0.13"
 # Temporary; should be moved to fluctlight-main
-# reqwest = { version = "0.11", features = ["blocking"]}
+ureq = { version = "2.5", features = ["json"]}
 percent-encoding = "2.1"
 sha2 = "0.10"
 askama = "0.11"
