--- a/fluctlight-mod-interface/Cargo.toml
+++ b/fluctlight-mod-interface/Cargo.toml
@@ -2,7 +2,7 @@
 name = "fluctlight-mod-interface"
 version = "0.1.0"
 edition = "2021"
-license = "Apache-2.0"
+license = "MIT OR Apache-2.0"
 authors = ["Andrei Vasiliu <whyte.vuhuni@gmail.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
